fixed line height on nav to align with travis logo

--- a/assets/styles/top.sass
+++ b/assets/styles/top.sass
@@ -1,7 +1,7 @@
 @import "_mixins/all"
 
 #top
-  line-height: 55px
+  line-height: 60px
   background: #40454f
   font-size: $font-size-normal
 
